<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".ui.petunjuk.PetunjukActivity">

    <LinearLayout
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <include
            layout="@layout/toolbar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

    </LinearLayout>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="@dimen/_10sdp">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="@font/quicksand_bold"
                android:text="1. Langkah Pertama"
                android:textColor="@color/black" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/_10sdp"
                android:text="@string/langkah1" />

            <ImageView
                android:layout_width="@dimen/_200sdp"
                android:layout_height="@dimen/_400sdp"
                android:layout_gravity="center"
                android:layout_marginTop="@dimen/_5sdp"
                android:background="@drawable/halamanutama" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_10sdp"
                android:fontFamily="@font/quicksand_bold"
                android:text="2. Langkah Kedua"
                android:textColor="@color/black" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/_12sdp"
                android:text="@string/langkah2" />

            <ImageView
                android:layout_width="@dimen/_200sdp"
                android:layout_height="@dimen/_400sdp"
                android:layout_gravity="center"
                android:layout_marginTop="@dimen/_5sdp"
                android:background="@drawable/menunggubelumlogin" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_10sdp"
                android:fontFamily="@font/quicksand_bold"
                android:text="3. Langkah Ketiga"
                android:textColor="@color/black" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/_12sdp"
                android:text="@string/langkah3" />

            <ImageView
                android:layout_width="@dimen/_200sdp"
                android:layout_height="@dimen/_400sdp"
                android:layout_gravity="center"
                android:layout_marginTop="@dimen/_5sdp"
                android:background="@drawable/masuk" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_10sdp"
                android:fontFamily="@font/quicksand_bold"
                android:text="4. Langkah keempat"
                android:textColor="@color/black" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/_13sdp"
                android:text="@string/Langkah4" />

            <ImageView
                android:layout_width="@dimen/_200sdp"
                android:layout_height="@dimen/_400sdp"
                android:layout_gravity="center"
                android:layout_marginTop="@dimen/_5sdp"
                android:background="@drawable/registerasi" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_10sdp"
                android:fontFamily="@font/quicksand_bold"
                android:text="5. Langkah kelima"
                android:textColor="@color/black" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/_12sdp"
                android:text="@string/Langkah5" />

            <ImageView
                android:layout_width="@dimen/_200sdp"
                android:layout_height="@dimen/_400sdp"
                android:layout_gravity="center"
                android:layout_marginTop="@dimen/_5sdp"
                android:background="@drawable/login" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_10sdp"
                android:fontFamily="@font/quicksand_bold"
                android:text="6. Langkah keenam"
                android:textColor="@color/black" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/_12sdp"
                android:text="@string/langkah6" />

            <ImageView
                android:layout_width="@dimen/_200sdp"
                android:layout_height="@dimen/_400sdp"
                android:layout_gravity="center"
                android:layout_marginTop="@dimen/_5sdp"
                android:background="@drawable/halamanutama" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_10sdp"
                android:fontFamily="@font/quicksand_bold"
                android:text="7. Langkah ketujuh"
                android:textColor="@color/black" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/_12sdp"
                android:text="@string/langkah7" />

            <ImageView
                android:layout_width="@dimen/_200sdp"
                android:layout_height="@dimen/_400sdp"
                android:layout_gravity="center"
                android:layout_marginTop="@dimen/_5sdp"
                android:background="@drawable/detailmobil" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_10sdp"
                android:fontFamily="@font/quicksand_bold"
                android:text="8. Langkah kedelapan"
                android:textColor="@color/black" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/_12sdp"
                android:text="@string/langkah8" />

            <ImageView
                android:layout_width="@dimen/_200sdp"
                android:layout_height="@dimen/_400sdp"
                android:layout_gravity="center"
                android:layout_marginTop="@dimen/_5sdp"
                android:background="@drawable/booking" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_10sdp"
                android:fontFamily="@font/quicksand_bold"
                android:text="9. Langkah kesembilan"
                android:textColor="@color/black" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/_12sdp"
                android:text="@string/langkah9" />

            <ImageView
                android:layout_width="@dimen/_200sdp"
                android:layout_height="@dimen/_400sdp"
                android:layout_gravity="center"
                android:layout_marginTop="@dimen/_5sdp"
                android:background="@drawable/adaptermenunggukosong" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_10sdp"
                android:fontFamily="@font/quicksand_bold"
                android:text="10. Langkah kesepuluh"
                android:textColor="@color/black" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/_17sdp"
                android:text="@string/langkah10" />

            <ImageView
                android:layout_width="@dimen/_200sdp"
                android:layout_height="@dimen/_400sdp"
                android:layout_gravity="center"
                android:layout_marginTop="@dimen/_5sdp"
                android:background="@drawable/menunggu" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_10sdp"
                android:fontFamily="@font/quicksand_bold"
                android:text="11. Langkah kesebelas"
                android:textColor="@color/black" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/_13sdp"
                android:text="@string/langkah11" />

            <ImageView
                android:layout_width="@dimen/_200sdp"
                android:layout_height="@dimen/_400sdp"
                android:layout_gravity="center"
                android:layout_marginTop="@dimen/_5sdp"
                android:background="@drawable/detailmenunggu" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_10sdp"
                android:fontFamily="@font/quicksand_bold"
                android:text="12. Langkah kedua belas"
                android:textColor="@color/black" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/_16sdp"
                android:text="@string/langkah12" />
            />

            <ImageView
                android:layout_width="@dimen/_200sdp"
                android:layout_height="@dimen/_400sdp"
                android:layout_gravity="center"
                android:layout_marginTop="@dimen/_5sdp"
                android:background="@drawable/statusdaftar" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_10sdp"
                android:fontFamily="@font/quicksand_bold"
                android:text="13. Langkah ketiga belas"
                android:textColor="@color/black" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/_16sdp"
                android:text="@string/langkah13" />

            <ImageView
                android:layout_width="@dimen/_200sdp"
                android:layout_height="@dimen/_400sdp"
                android:layout_gravity="center"
                android:layout_marginTop="@dimen/_5sdp"
                android:background="@drawable/halamanutama" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_10sdp"
                android:fontFamily="@font/quicksand_bold"
                android:text="14. Langkah keempat belas"
                android:textColor="@color/black" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/_17sdp"
                android:text="@string/langkah14" />

            <ImageView
                android:layout_width="@dimen/_200sdp"
                android:layout_height="@dimen/_400sdp"
                android:layout_gravity="center"
                android:layout_marginTop="@dimen/_5sdp"
                android:background="@drawable/profil1" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_10sdp"
                android:fontFamily="@font/quicksand_bold"
                android:text="15. Langkah kelima belas"
                android:textColor="@color/black" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/_16sdp"
                android:text="@string/langkah15" />

            <ImageView
                android:layout_width="@dimen/_200sdp"
                android:layout_height="@dimen/_400sdp"
                android:layout_gravity="center"
                android:layout_marginTop="@dimen/_5sdp"
                android:background="@drawable/updateprofil" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_10sdp"
                android:fontFamily="@font/quicksand_bold"
                android:text="16. Langkah keenam belas"
                android:textColor="@color/black" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/_15sdp"
                android:text="@string/langkah16" />

            <ImageView
                android:layout_width="@dimen/_200sdp"
                android:layout_height="@dimen/_400sdp"
                android:layout_gravity="center"
                android:layout_marginTop="@dimen/_5sdp"
                android:background="@drawable/profil1" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_10sdp"
                android:fontFamily="@font/quicksand_bold"
                android:text="17. Langkah ketujuh belas"
                android:textColor="@color/black" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/_16sdp"
                android:text="@string/langkah17" />

            <ImageView
                android:layout_width="@dimen/_200sdp"
                android:layout_height="@dimen/_400sdp"
                android:layout_gravity="center"
                android:layout_marginTop="@dimen/_5sdp"
                android:background="@drawable/updatepassword" />

<!--            <TextView-->
<!--                android:layout_width="match_parent"-->
<!--                android:layout_height="wrap_content"-->
<!--                android:layout_marginTop="@dimen/_10sdp"-->
<!--                android:fontFamily="@font/quicksand_bold"-->
<!--                android:text="18. Langkah kedelapan belas"-->
<!--                android:textColor="@color/black" />-->

<!--            <TextView-->
<!--                android:layout_width="match_parent"-->
<!--                android:layout_height="wrap_content"-->
<!--                android:layout_marginStart="@dimen/_16sdp"-->
<!--                android:text="@string/langkah18" />-->

<!--            <ImageView-->
<!--                android:layout_width="@dimen/_200sdp"-->
<!--                android:layout_height="@dimen/_400sdp"-->
<!--                android:layout_gravity="center"-->
<!--                android:layout_marginTop="@dimen/_5sdp"-->
<!--                android:background="@drawable/img_no_image" />-->
        </LinearLayout>

    </ScrollView>

</LinearLayout>